Added BADGERS arxiv link

--- a/main.tex
+++ b/main.tex
@@ -80,7 +80,8 @@ Detailed achievements:%
 \section{Publications}
 \begin{enumerate}
 	\item  B Hahn, R Nithyanand, P Gill, and R Johnson, “\textbf{Games Without Frontiers: Investigating Video Games as a Covert Channel},” in 1st IEEE European Symposium on Security and Privacy (EuroS\&P), 2016 \\ \url{http://arxiv.org/abs/1503.05904};
-	\item D Zage, H Xu, T Kroeger, B Hahn, N Donoghue, and T Benson, “\textbf{Secure Membership Tests via Secret Sharing},” in International Workshop on Computing, Networking and Communications (CNC at ICNC), 2016;
+	\item D Zage, H Xu, T Kroeger, B Hahn, N Donoghue, and T Benson, “\textbf{Secure Membership Tests via Secret Sharing},” in International Workshop on Computing, Networking and Communications (CNC at ICNC), 2016 \\
+	\url{http://arxiv.org/abs/1511.09116};
 	\item N Donoghue, B Hahn, H Xu, T Kroeger, D Zage, and R Johnson, “\textbf{Tracking Network Events with Write Optimized Data Structures},” in 4th International Workshop on Building Analysis Datasets and Gathering Experience Returns for Security (BADGERS at RAID), 2015.
 \end{enumerate}
 
