--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,7 @@
 \section{Interests}
 \cvitem{Security}{Censorship, NetSec, and Encryption}
 \cvitem{Algorithms}{Cool and Fun Algorithms}
-\cvitem{Data Structures}{Write Optimized Data Structures and Quotient Filters}
+\cvitem{Databases}{Write Optimized Data Structures and Quotient Filters}
 \cvitem{Puzzles}{DFA Puzzles, Logic Puzzles, Physics Puzzles, You Name It!}
 \cvitem{Other}{Above are interests that I am formally acquainted with. However, most Computer Science topics interest me.}
 
@@ -81,20 +81,21 @@ Detailed achievements:%
 \begin{enumerate}
 	\item  B Hahn, R Nithyanand, P Gill, and R Johnson, “\textbf{Games Without Frontiers: Investigating Video Games as a Covert Channel},” in 1st IEEE European Symposium on Security and Privacy (EuroS\&P), 2016 \\ \url{http://arxiv.org/abs/1503.05904};
 	\item D Zage, H Xu, T Kroeger, B Hahn, N Donoghue, and T Benson, “\textbf{Secure Membership Tests via Secret Sharing},” in International Workshop on Computing, Networking and Communications (CNC at ICNC), 2016 \\
+	\url{http://arxiv.org/abs/1512.00102};
+	\item N Donoghue, B Hahn, H Xu, T Kroeger, D Zage, and R Johnson, “\textbf{Tracking Network Events with Write Optimized Data Structures},” in 4th International Workshop on Building Analysis Datasets and Gathering Experience Returns for Security (BADGERS at RAID), 2015\\
 	\url{http://arxiv.org/abs/1511.09116};
-	\item N Donoghue, B Hahn, H Xu, T Kroeger, D Zage, and R Johnson, “\textbf{Tracking Network Events with Write Optimized Data Structures},” in 4th International Workshop on Building Analysis Datasets and Gathering Experience Returns for Security (BADGERS at RAID), 2015.
 \end{enumerate}
 
 \section{Press}
 \begin{enumerate}
 	\item \textbf{WIRED} -- \href{http://www.wired.com/2015/04/app-hides-secret-messages-starcraft-style-games/}{\color{blue}An App That Hides Secret Messages in Starcraft-Style Games} 4/15/15 \\
-	Fantastic article by Andy Greenberg, highlighting my project, Castle. He makes the work significant and accessible to a broader audience.
+	Article by Andy Greenberg, highlighting my project, Castle. He makes the work significant and accessible to a broader audience.
 	\item \textbf{CNN} -- \href{http://www.cnn.com/2015/10/25/asia/china-war-internet-great-firewall/}{\color{blue}Great Firewall rising: How China wages its war on the Internet} 10/25/15\\
-	Great piece by James Griffiths, covering the Great Firewall of China. When discussing anti-censorship efforts to circumvent the wall, he presents my project, Castle, as a favorable alternative to VPNs.
+	Piece by James Griffiths, covering the Great Firewall of China. When discussing anti-censorship efforts to circumvent the wall, he presents my project, Castle, as a favorable alternative to VPNs.
 	\item \textbf{South China Morning Post} -- \href{http://www.scmp.com/tech/apps-gaming/article/1775587/anti-censorship-technology-uses-online-video-games-bypass-chinese}{\color{blue}Anti-censorship technology uses online video games	to bypass Chinese internet restrictions} 4/27/15\\
-	Nice, short piece by James Griffiths, spotlighting my project, Castle. His goal, as he said in our interview, is to spread awareness of the project within China. We have since been contacted by several Chinese citizens asking to use our system.
+	Piece by James Griffiths, spotlighting my project, Castle. His goal, as he said in our interview, is to spread awareness of the project within China. We have since been contacted by several Chinese citizens asking to use our system.
 	\item \textbf{Statesman} -- \href{http://sbstatesman.com/2015/07/01/researchers-develop-a-way-to-send-secret-messages-through-video-games/}{\color{blue}Researchers develop a way to send secret messages through video games} 7/1/15 \\
-	Great article from Sarah Elsesser, a fellow Stony Brook student, spreading interest in my project, Castle, to Stony Brook students, faculty, and staff.
+	Article from Sarah Elsesser, a fellow Stony Brook student, spreading interest in my project, Castle, to Stony Brook students, faculty, and staff.
 \end{enumerate}
 
 \section{References}
