--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 % personal data
 \name{Bridger}{Hahn}
 %\title{}                               % optional, remove / comment the line if not wanted
-\address{5239 Lake Road West \#405}{Saybrook}{Ohio}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
+\address{26 Witherspoon St. Apt 2}{Princeton}{NJ}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 \phone[mobile]{+1~(440)~417~8328}                   % optional, remove / comment the line if not wanted
 %\phone[fixed]{+2~(345)~678~901}                    % optional, remove / comment the line if not wanted
 %\phone[fax]{+3~(456)~789~012}                      % optional, remove / comment the line if not wanted
@@ -62,8 +62,8 @@
 \cvlistitem{Stony Brook Provost’s Scholarship Fall 2012--Spring 2016}
 
 \section{Interests}
-\cvitem{Security}{Censorship Circumvention, Network Privacy, Intrusion Detection}
-\cvitem{Networking}{Software Defined Networking, Internet of Things}
+\cvitem{Networking}{Internet of Things, Software Defined Networking}
+\cvitem{Security}{Network Privacy, Censorship}
 
 \section{Experience}
 \cventry{2015--2016}{Student Intern}{Sandia National Laboratories}{Livermore, CA}{}{%General description no longer than 1--2 lines.\newline{}%
@@ -75,7 +75,7 @@ Detailed achievements:%
 \end{itemize}}
 
 \section{Current Work}
-\textbf{Network Level Privacy}: I am currently working on implementing an SDN protocol to be run at border routers of an ISP. This protocol would provide anonymity for users within the ISP and not interfere with ordinary packet routing.
+\textbf{Classifying IoT Devices From DNS Traffic}: My current work focuses on using campus network data and IoT device captures to classify IoT devices on campus. We are training an online, linear classifier to detect IoT devices from the DNS requests that pass through a software switch. This work can then be scaled up to ISP-level classification of IoT devices and may lead to security and privacy implications for IoT devices.
 
 \section{Publications}
 \begin{enumerate}
@@ -101,9 +101,9 @@ Detailed achievements:%
 \section{References}
 \begin{cvcolumns}
 	\hspace{-3cm}
-  \cvcolumn{Professor}{Michael Bender\\Phillipa Gill\\ Rob Johnson \\ Nick Feamster}
-  \cvcolumn{University}{Stony Brook\\ Stony Brook\\ Stony Brook \\ Princeton}
-  \cvcolumn[0.5]{Contact}{bender@cs.stonybrook.edu\\ phillipa@cs.stonybrook.edu\\ rob@cs.stonybrook.edu \\ feamster@cs.princeton.edu}
+  \cvcolumn{Professor}{Nick Feamster \\ Dan Leyzberg \\ Rob Johnson \\ Michael Bender}
+  \cvcolumn{University}{Princeton \\ Princeton \\ Stony Brook\\ Stony Brook}
+  \cvcolumn[0.5]{Contact}{feamster@cs.princeton.edu \\ dan.leyzberg@princeton.edu \\ rob@cs.stonybrook.edu \\ bender@cs.stonybrook.edu }
 \end{cvcolumns}
 
 \clearpage
