--- a/main.tex
+++ b/main.tex
@@ -86,6 +86,14 @@ Detailed achievements:%
 	\url{http://arxiv.org/abs/1511.09116};
 \end{enumerate}
 
+\section{Teaching}
+\cvitem{Fall 2016 -- present}{COS 126 TA:
+Teaching has offered me a unique opportunity to impact many undergraduate students. Students often come to this course with no CS background and require additional attention to keep up. I try to go the extra mile to interest students in CS and motivate the material, holding additional review sessions and extended office hours.}
+\cvitem{Summer 2017}{Near Peer Mentor: 
+Mentored an REU student from a nearby University. Students were paired with mentors of varying backgrounds to supply new perspectives on their research.}
+\cvitem{Summer 2017}{Princeton Summer Programming Mentor
+Mentored a group of undergraduate students who were tasked with creating a social media app to meet new friends. The students had no prior experience with databases, servers, or app development.}
+
 \section{Press}
 \begin{enumerate}
 	\item \textbf{WIRED} -- \href{http://www.wired.com/2015/04/app-hides-secret-messages-starcraft-style-games/}{\color{blue}An App That Hides Secret Messages in Starcraft-Style Games} 4/15/15 \\
