--- a/main.tex
+++ b/main.tex
@@ -55,27 +55,25 @@
 
 \section{Education}
 \cventry{2012--2016}{BS}{Stony Brook}{Stony Brook, NY}{\textit{Computer Science}}{Honors Degree}  % arguments 3 to 6 can be left empty
-\cventry{2016--Current}{MS}{Princeton}{Princeton, NJ}{\textit{Computer Science}}{}
+\cventry{2016--2018}{MS}{Princeton}{Princeton, NJ}{\textit{Computer Science}}{Incomplete}
 %\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}
 
-\section{Awards}
-\cvlistitem{Stony Brook Provost’s Scholarship Fall 2012--Spring 2016}
-
 \section{Interests}
-\cvitem{Networking}{Internet of Things, Software Defined Networking}
-\cvitem{Security}{Network Privacy, Censorship}
+\cvitem{Networking}{Project Stream, Distributed Solutions}
+\cvitem{Machine Learning}{AlphaStar, OpenAI}
+\cvitem{Warhammer 40K}{Tournament Organizing, Competitive Play, Hobbying and Painting}
 
 \section{Experience}
+\cventry{2018-Current}{Teacher}{C2 Education}{San Jose, CA}{}{
+Mentor high school students in AP courses, SAT/ACT prep, and college applications.
+}
+\cventry{2016-2018}{Teaching Assistant}{Princeton University}{Princeton, NJ}{}{
+Taught Introductory Computer Science: leading precepts, holding office hours, grading homework, and hosting large exam review sessions.
+}
 \cventry{2015--2016}{Student Intern}{Sandia National Laboratories}{Livermore, CA}{}{%General description no longer than 1--2 lines.\newline{}%
-Detailed achievements:%
-\begin{itemize}%
-\item Researched practical applications of Shamir secret sharing and Write-Optimized Data Structures applied to network event tracking.
-\item Designed and implemented a write-optimized database for storing network events.
-\item Resulted in two publications.
-\end{itemize}}
-
-\section{Current Work}
-\textbf{Classifying IoT Devices From DNS Traffic}: My current work focuses on using campus network data and IoT device captures to classify IoT devices on campus. We are training an online, linear classifier to detect IoT devices from the DNS requests that pass through a software switch. This work can then be scaled up to ISP-level classification of IoT devices and may lead to security and privacy implications for IoT devices.
+Researched practical applications of Shamir secret sharing and Write-Optimized Data Structures applied to network event tracking.
+Designed and implemented a write-optimized database for storing network events. Resulted in two publications.
+}
 
 \section{Publications}
 \begin{enumerate}
@@ -85,34 +83,6 @@ Detailed achievements:%
 	\item N Donoghue, B Hahn, H Xu, T Kroeger, D Zage, and R Johnson, “\textbf{Tracking Network Events with Write Optimized Data Structures},” in 4th International Workshop on Building Analysis Datasets and Gathering Experience Returns for Security (BADGERS at RAID), 2015\\
 	\url{http://arxiv.org/abs/1511.09116};
 \end{enumerate}
-
-\section{Teaching}
-\cvitem{Fall 2016 -- present}{COS 126 TA:
-Teaching has offered me a unique opportunity to impact many undergraduate students. Students often come to this course with no CS background and require additional attention to keep up. I try to go the extra mile to interest students in CS and motivate the material, holding additional review sessions and extended office hours.}
-\cvitem{Summer 2017}{Near Peer Mentor: 
-Mentored an REU student from a nearby University. Students were paired with mentors of varying backgrounds to supply new perspectives on their research.}
-\cvitem{Summer 2017}{Princeton Summer Programming Mentor
-Mentored a group of undergraduate students who were tasked with creating a social media app to meet new friends. The students had no prior experience with databases, servers, or app development.}
-
-\section{Press}
-\begin{enumerate}
-	\item \textbf{WIRED} -- \href{http://www.wired.com/2015/04/app-hides-secret-messages-starcraft-style-games/}{\color{blue}An App That Hides Secret Messages in Starcraft-Style Games} 4/15/15 \\
-	Article by Andy Greenberg, highlighting my project, Castle. He makes the work significant and accessible to a broader audience.
-	\item \textbf{CNN} -- \href{http://www.cnn.com/2015/10/25/asia/china-war-internet-great-firewall/}{\color{blue}Great Firewall rising: How China wages its war on the Internet} 10/25/15\\
-	Piece by James Griffiths, covering the Great Firewall of China. When discussing anti-censorship efforts to circumvent the wall, he presents my project, Castle, as a favorable alternative to VPNs.
-	\item \textbf{South China Morning Post} -- \href{http://www.scmp.com/tech/apps-gaming/article/1775587/anti-censorship-technology-uses-online-video-games-bypass-chinese}{\color{blue}Anti-censorship technology uses online video games	to bypass Chinese internet restrictions} 4/27/15\\
-	Piece by James Griffiths, spotlighting my project, Castle. His goal, as he said in our interview, is to spread awareness of the project within China. We have since been contacted by several Chinese citizens asking to use our system.
-	\item \textbf{Statesman} -- \href{http://sbstatesman.com/2015/07/01/researchers-develop-a-way-to-send-secret-messages-through-video-games/}{\color{blue}Researchers develop a way to send secret messages through video games} 7/1/15 \\
-	Article from Sarah Elsesser, a fellow Stony Brook student, spreading interest in my project, Castle, to Stony Brook students, faculty, and staff.
-\end{enumerate}
-
-\section{References}
-\begin{cvcolumns}
-	\hspace{-3cm}
-  \cvcolumn{Professor}{Nick Feamster \\ Dan Leyzberg \\ Rob Johnson \\ Michael Bender}
-  \cvcolumn{University}{Princeton \\ Princeton \\ Stony Brook\\ Stony Brook}
-  \cvcolumn[0.5]{Contact}{feamster@cs.princeton.edu \\ dan.leyzberg@princeton.edu \\ rob@cs.stonybrook.edu \\ bender@cs.stonybrook.edu }
-\end{cvcolumns}
 
 \clearpage
 \end{document}
