--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 % personal data
 \name{Bridger}{Hahn}
 %\title{}                               % optional, remove / comment the line if not wanted
-\address{26 Witherspoon St. Apt 2}{Princeton}{NJ}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
+\address{2919 Erika Ct}{San Jose}{CA}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 \phone[mobile]{+1~(440)~417~8328}                   % optional, remove / comment the line if not wanted
 %\phone[fixed]{+2~(345)~678~901}                    % optional, remove / comment the line if not wanted
 %\phone[fax]{+3~(456)~789~012}                      % optional, remove / comment the line if not wanted
